글로벌 스타일 추가

--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,33 @@
-
+html,
+body {
+  margin: 0;
+  padding: 0;
+}
+html,
+body,
+* {
+  box-sizing: border-box;
+  letter-spacing: -0.2px;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+ul {
+  margin: 0 !important;
+}
+ul {
+  list-style: none;
+}
+a {
+  color: inherit !important;
+  text-decoration: none !important;
+}
+input,
+button {
+  border: 0 none;
+  background-color: transparent;
+  outline: none;
+}
