--- a/src/index.css
+++ b/src/index.css
@@ -38,3 +38,25 @@ button {
   background-color: transparent;
   outline: none;
 }
+@media screen and (max-width: 768px) {
+  /* something */
+}
+
+@media screen and (orientation: landscape) {
+  /* 스크린이 가로일 떄 스타일 적용 */
+}
+
+@media screen and (orientation: portrait) {
+  /* 스크린이 세로(가로 길이가 세로 길이만큼 짧아진 시점 이후)일 때만 스타일 적용 */
+}
+
+@media (hover: hover) {
+  /* 사용자가 요소 위에 (마우스 커서를) 올릴 수 있는 능력을 가진 조건인지를 시험할 수 있다 */
+}
+
+@media (prefers-color-scheme: light) {
+  /* 라이트모드에서 적용 */
+}
+@media (prefers-color-scheme: dark) {
+  /* 다크모드에서 적용 */
+}
